--- a/projects/example/src/app/file-input/file-input.component.html
+++ b/projects/example/src/app/file-input/file-input.component.html
@@ -21,7 +21,7 @@
                             <mat-label>Drop a file in the container</mat-label>
                             <ash-mat-file-input fileDrop>
                                 <label dropLabel class="example-label">
-                                    <mat-icon color="accent">publish</mat-icon> C'est un test 2
+                                    <mat-icon color="accent">publish</mat-icon> C'est un test
                                 </label>
                             </ash-mat-file-input>
                         </mat-form-field>
