--- a/projects/ash-material-file-input/src/lib/file-input/file-input.component.html
+++ b/projects/ash-material-file-input/src/lib/file-input/file-input.component.html
@@ -1,5 +1,5 @@
 <div class="ash-drop-container" *ngIf="fileDrop" ashDrop (fileDropped)="_fileChange($event)"
-    [style.height.px]="dropContainerHeight" dragoverClass="ash-dragover-input" [class.ash-error]="errorState">
+    [style.height.px]="dropContainerHeight" [class.ash-error]="errorState">
     <ng-content select="[dropLabel]"></ng-content>
 </div>
 <input type="file" hidden [accept]="accept" [multiple]="multiple">
