--- a/projects/example/src/app/file-input/file-input.component.html
+++ b/projects/example/src/app/file-input/file-input.component.html
@@ -26,6 +26,7 @@
                             </ash-mat-file-input>
                         </mat-form-field>
                     </form>
+                    <pre>{{fc.errors | json}}</pre>
                     <mat-divider></mat-divider>
                     <pre class="example-code">
                         <code class="prettyprint linenums">{{basicCode}}</code>
