Moved .ash-file-input-placeholder into .ash-file-input-filename

--- a/projects/ash-material-file-input/src/lib/file-input/file-input.component.scss
+++ b/projects/ash-material-file-input/src/lib/file-input/file-input.component.scss
@@ -14,11 +14,13 @@
     white-space: nowrap;
     width: 100%;
     vertical-align: bottom;
+
+    &.ash-file-input-placeholder {
+        opacity: 0.5;
+    }
 }
 
-.ash-file-input-placeholder {
-    opacity: 0.5;
-}
+
 
 .ash-file-input-floating {
     opacity: 1;
