--- a/projects/example/src/app/file-input/file-input.component.html
+++ b/projects/example/src/app/file-input/file-input.component.html
@@ -15,6 +15,7 @@
                         <mat-form-field>
                             <mat-label>Click me to chose a file</mat-label>
                             <ash-mat-file-input></ash-mat-file-input>
+                            <mat-hint>test click</mat-hint>
                             <mat-icon color="accent" matSuffix>publish</mat-icon>
                         </mat-form-field>
                         <mat-form-field>
